# CPP_Server

./: .gitignore  README.md
ocean_http/: CMakeLists.txt  config.cpp  config.h  main.cpp  webserver.cpp  webserver.h
ocean_http/cgimysql/: sql_connection_pool.cpp  sql_connection_pool.h
ocean_http/http/: http_conn.cpp  http_conn.h
ocean_http/lock/: locker.cpp  locker.h
ocean_http/log/: block_queue.cpp  block_queue.h  log.cpp  log.h
ocean_http/root/: judge.html  log.html  logError.html  picture.html  register.html  registerError.html  video.html  welcome.html
ocean_http/threadpool/: threadpool.cpp  threadpool.h
ocean_http/timer/: lst_timer.cpp  lst_timer.h
ocean_im/: CMakeLists.txt  buildscript
ocean_im/cmake/: FindSoci.cmake
ocean_im/oceanim/: type.h
ocean_im/oceanim/client/: CMakeLists.txt
ocean_im/oceanim/server/access/: CMakeLists.txt  access.proto
ocean_im/oceanim/server/dbproxy/: CMakeLists.txt  dbproxy.cpp  dbproxy.proto  dbproxy_service.cpp  dbproxy_service.h
ocean_im/oceanim/server/idgen/: CMakeLists.txt  idgen.proto
ocean_im/oceanim/server/logic/: CMakeLists.txt  logic.pb.cc  logic.pb.h  logic.proto  logic_service.cpp  logic_service.h
ocean_im/oceanim/thirds/brpc1.7/include/: idl_options.pb.h
ocean_im/oceanim/thirds/brpc1.7/include/brpc/: options.pb.h  span.pb.h  trackme.pb.h
ocean_im/oceanim/thirds/brpc1.7/include/brpc/policy/: mongo.pb.h
ocean_im/oceanim/util/: consistent_hash.h  error.cpp  error.h  initialize.cpp  initialize.h
ocean_im/server/access/: CMakeLists.txt
ocean_im/server/common/: message.proto  messages.pb.cc  messages.pb.h  messages.proto
ocean_im/server/dbproxy/: CMakeLists.txt  dbproxy.cpp  dbproxy.pb.cc  dbproxy.pb.h  dbproxy.proto  dbproxy_service.cpp  dbproxy_service.h
ocean_im/server/idgen/: idgen.pb.cc  idgen.pb.h
ocean_im/server/logic/: CMakeLists.txt  logic.proto  logic_service.cpp
ocean_im/thirds/brpc1.7/include/brpc/: builtin_service.pb.h  errno.pb.h  get_favicon.pb.h  get_js.pb.h  nshead_meta.pb.h  proto_base.pb.h  rpc_dump.pb.h  rtmp.pb.h  streaming_rpc_meta.pb.h
ocean_im/thirds/brpc1.7/include/brpc/policy/: baidu_rpc_meta.pb.h  hulu_pbrpc_meta.pb.h  public_pbrpc_meta.pb.h  sofa_pbrpc_meta.pb.h
ocean_im/thirds/soci4.0.3/include/soci/: soci-config.h
ocean_im/util/: consistent_hash.h  error.cpp
ocean_net/: CmakeLists.txt  readme.md
ocean_net/src/: fiber.cpp  fiber.h  log.cpp  log.h  mutex.h  noncopyable.h
ocean_net/test/: test.cpp
